Add Intel Mac installer build task